fix(1232): minor alignment fix

--- a/packages/lighthouse-spa/src/app/home/components/home/home.component.scss
+++ b/packages/lighthouse-spa/src/app/home/components/home/home.component.scss
@@ -34,6 +34,10 @@
   &-code-block {
     height: 100%;
     overflow: auto;
+
+    pre {
+      white-space: pre-line;
+    }
   }
   &-code-header {
     position: sticky;
